<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--    header-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:background="@color/primary_yellow"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/NewNote_title"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/primary_black"
                android:gravity="center|left">
            </TextView>

        </LinearLayout>

    </LinearLayout>

    <!--    body-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/secondary_ash"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ET_newNote"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:fontFamily="@font/poppins_regular"
                android:textSize="20sp"
                android:hint="@string/NewNote_hint"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:background="@android:color/transparent"
                android:scrollbars="vertical">
            </EditText>

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/NewNote_btn_save"
                android:textSize="20sp"
                android:backgroundTint="@color/primary_ash"
                android:onClick="saveNewNote">
            </Button>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>